# fundamentals-of-software-architecture

./: .gitignore  book-notes.org  readme.org
le-pip/: package-lock.json  package.json  vite.config.js
le-pip-backend/: pyproject.toml
le-pip-backend/le_pip_backend/: celery_app.py  celery_worker.py  main.py  tasks.py
le-pip/src/: App.jsx
